--- a/index.html
+++ b/index.html
@@ -3,49 +3,42 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Finansial — Tema Baru</title>
+<title>Web Finansial — Layout Modern</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-:root {
-  --bg: #f5f7fa;
-  --card-bg: #ffffff;
-  --text-color: #333333;
-  --accent: #3498db;
-  --danger: #e74c3c;
-  --success: #2ecc71;
-  --input-bg: #f0f2f5;
-  --input-border: #ccc;
+:root{
+  --bg:#f5f7fa;
+  --card-bg:#fff;
+  --text-color:#333;
+  --accent:#3498db;
+  --danger:#e74c3c;
+  --input-bg:#f0f2f5;
+  --input-border:#ccc;
 }
-* { box-sizing:border-box; font-family:'Poppins',sans-serif; }
-body { margin:0; background:var(--bg); color:var(--text-color); }
-header { display:flex; justify-content:space-between; align-items:center; padding:1rem; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1);}
-header h1 { margin:0; font-size:1.5rem; color:var(--accent);}
-header .icon { cursor:pointer; font-size:1.2rem; color:var(--accent);}
-nav { display:flex; justify-content:space-around; background:#fff; border-bottom:1px solid #ddd; box-shadow:0 1px 2px rgba(0,0,0,0.05);}
-nav button { flex:1; padding:1rem; background:none; border:none; color:var(--text-color); cursor:pointer; font-weight:600; transition:0.3s; }
-nav button:hover { background:var(--accent); color:#fff; }
-nav button.active { background:var(--accent); color:#fff; }
-.container { padding:1rem; }
-.summary { display:flex; flex-wrap:wrap; gap:1rem; margin-bottom:1rem; }
-.card { flex:1 1 150px; background:var(--card-bg); padding:1rem; border-radius:10px; text-align:center; box-shadow:0 2px 5px rgba(0,0,0,0.05);}
-.card h3 { margin:0.5rem 0 0.2rem 0; font-size:1rem; }
-.card p { margin:0; font-size:1.2rem; font-weight:600; }
-.form-section { background:var(--card-bg); padding:1rem; border-radius:10px; margin-bottom:1rem; box-shadow:0 2px 5px rgba(0,0,0,0.05);}
-.form-section label { display:block; margin-top:0.5rem; }
-.form-section input, .form-section select, .form-section textarea { width:100%; padding:0.5rem; margin-top:0.2rem; border-radius:5px; border:1px solid var(--input-border); background:var(--input-bg); color:var(--text-color); }
-.form-section button { margin-top:0.5rem; padding:0.5rem 1rem; background:var(--accent); border:none; color:#fff; border-radius:5px; cursor:pointer; transition:0.3s; }
-.form-section button:hover { background:#2980b9; }
-.history { background:var(--card-bg); padding:1rem; border-radius:10px; max-height:300px; overflow-y:auto; box-shadow:0 2px 5px rgba(0,0,0,0.05);}
-.history-item { display:flex; flex-direction:column; justify-content:space-between; padding:0.5rem 0; border-bottom:1px solid #eee; }
-.history-item-main { display:flex; justify-content:space-between; align-items:center; }
-.history-item button { background:var(--danger); border:none; color:#fff; border-radius:3px; padding:0 5px; cursor:pointer; margin-left:5px; transition:0.2s;}
-.history-item button:hover { background:#c0392b; }
-.payment-item { display:flex; justify-content:space-between; margin-left:10px; margin-top:3px; }
-.payment-item button { background:var(--danger); padding:0 5px; font-size:0.9rem; transition:0.2s;}
-.payment-item button:hover { background:#c0392b; }
-.payment-form { display:flex; gap:5px; margin-left:10px; margin-top:5px; }
-.payment-form input, .payment-form select { flex:1; padding:0.3rem; font-size:0.9rem; border-radius:5px; border:1px solid var(--input-border);}
-@media(max-width:768px){ .summary { flex-direction:column; } }
+*{box-sizing:border-box;font-family:'Poppins',sans-serif;margin:0;padding:0;}
+body{background:var(--bg);color:var(--text-color);}
+header{display:flex;justify-content:space-between;align-items:center;padding:1rem;background:#fff;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+header h1{color:var(--accent);}
+nav{display:flex;justify-content:space-around;background:#fff;box-shadow:0 1px 2px rgba(0,0,0,0.05);}
+nav button{flex:1;padding:1rem;border:none;background:none;color:var(--text-color);cursor:pointer;font-weight:600;transition:.3s;}
+nav button:hover, nav button.active{background:var(--accent);color:#fff;}
+.container{padding:1rem;display:flex;flex-direction:column;gap:1rem;}
+.summary{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:1rem;}
+.card{background:var(--card-bg);padding:1rem;border-radius:12px;text-align:center;box-shadow:0 4px 10px rgba(0,0,0,0.05);transition:.3s;}
+.card:hover{box-shadow:0 6px 12px rgba(0,0,0,0.1);}
+.card h3{margin-bottom:0.3rem;font-size:1rem;}
+.card p{font-size:1.2rem;font-weight:600;}
+.section-wrapper{display:flex;flex-wrap:wrap;gap:1rem;}
+.form-section{flex:1 1 300px;background:var(--card-bg);padding:1rem;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.05);}
+.history{flex:1 1 300px;background:var(--card-bg);padding:1rem;border-radius:12px;max-height:400px;overflow-y:auto;box-shadow:0 2px 8px rgba(0,0,0,0.05);}
+.form-section label{display:block;margin-top:0.5rem;}
+.form-section input,.form-section select,.form-section textarea{width:100%;padding:0.5rem;margin-top:0.2rem;border-radius:5px;border:1px solid var(--input-border);background:var(--input-bg);}
+.form-section button{margin-top:0.5rem;padding:0.5rem 1rem;background:var(--accent);border:none;color:#fff;border-radius:6px;cursor:pointer;transition:.3s;}
+.form-section button:hover{background:#2980b9;}
+.history-item{display:flex;justify-content:space-between;align-items:center;padding:0.5rem 0;border-bottom:1px solid #eee;}
+.history-item button{background:var(--danger);border:none;color:#fff;border-radius:4px;padding:0 6px;cursor:pointer;transition:.2s;}
+.history-item button:hover{background:#c0392b;}
+@media(max-width:768px){.section-wrapper{flex-direction:column;}}
 </style>
 </head>
 <body>
@@ -71,12 +64,39 @@ nav button.active { background:var(--accent); color:#fff; }
     <div class="card"><h3>Pengeluaran Bersama</h3><p id="sum-pengeluaran-bersama">Rp0</p></div>
   </div>
 
-  <!-- Form & History (sama seperti versi sebelumnya, tinggal dipaste JS & HTML section) -->
+  <!-- Section modern: Form kiri, History kanan -->
+  <div id="penghasilan" class="section-wrapper">
+    <div class="form-section">
+      <h3>Input Penghasilan</h3>
+      <label>Nama</label>
+      <select id="input-penghasilan-nama"><option value="Cristian">Cristian</option><option value="Maharani">Maharani</option></select>
+      <label>Nominal</label>
+      <input type="text" id="input-penghasilan-nominal" placeholder="1.000.000">
+      <label>Keterangan</label>
+      <textarea id="input-penghasilan-ket" rows="2"></textarea>
+      <button onclick="addPenghasilan()">Tambah</button>
+    </div>
+    <div class="history" id="history-penghasilan"></div>
+  </div>
 
+  <!-- Tabungan, Pengeluaran, Hutang Aktif bisa dicopy sama pattern section-wrapper -->
 </div>
 
 <script>
-// Semua script JS versi sebelumnya tetap sama
+// JS nav & toggle
+const navBtns=document.querySelectorAll('.nav-btn');
+navBtns.forEach(btn=>btn.addEventListener('click',()=>{
+  document.querySelectorAll('.section-wrapper').forEach(s=>s.style.display='none');
+  document.getElementById(btn.dataset.target).style.display='flex';
+  navBtns.forEach(b=>b.classList.remove('active'));
+  btn.classList.add('active');
+}));
+
+// JS input ribuan & toggle tabungan nama
+function formatRibuan(input){ let val=input.value.replace(/\D/g,''); input.value=val?Number(val).toLocaleString('id-ID'):''; }
+['input-penghasilan-nominal'].forEach(id=>document.getElementById(id).addEventListener('input',()=>formatRibuan(document.getElementById(id))));
+
+// ...sisa JS versi final sebelumnya (addPenghasilan, addTabungan, addPengeluaran, addHutang, deleteItem, addPayment, cancelPayment, updateSummary)
 </script>
 
 </body>
